ctm-sf-homeloan-app/main/default/objects/CourtAction__c/CourtAction__c.object-meta.xml
<CustomObject>
    <label>Court Action</label>
    <nameField>
        <displayFormat>CA - {000000000}</displayFormat>
        <label>Court Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Court Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>