ctm-sf-homeloan-app/main/default/objects/CourtAction__c/fields/CourtDetails__c.field-meta.xml
<CustomField>
    <fullName>CourtDetails__c</fullName>
    <label>Court Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>