ctm-sf-homeloan-app/main/default/objects/CourtAction__c/fields/DateReported__c.field-meta.xml
<CustomField>
    <fullName>DateReported__c</fullName>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>