ctm-sf-homeloan-app/main/default/objects/CourtAction__c/fields/Plaintiff__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff__c</fullName>
    <label>Plaintiff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>