ctm-sf-homeloan-app/main/default/objects/CourtAction__c/fields/PlaintiffNumber__c.field-meta.xml
<CustomField>
    <fullName>PlaintiffNumber__c</fullName>
    <label>Plaintiff Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>