ctm-sf-homeloan-app/main/default/objects/CourtAction__c/fields/PublicActionTypes__c.field-meta.xml
<CustomField>
    <fullName>PublicActionTypes__c</fullName>
    <label>Public Action Types</label>
    <length>200</length>
    <type>Text</type>
</CustomField>